source/components/header/style.scss
@use "../../sass/mixin/focus";
@use "../../sass/mixin/tokens";

/* Component name */
$_: "c-header";

/* Design tokens */
@include tokens.create($_, getComponentTokens($_), ("base": var(--base),
        "logotype-height": calc(var(--c-header-logotype-height, 6) * var(--base)),
        "background-color": tokens.get($_, "color--surface"),
        "color": tokens.get($_, "color--surface-contrast"),
        "border-color": tokens.get($_, "color--primary"),
    ), ("color--surface": "color--background", ));

/* Component */
.#{$_} {
    z-index: 6000;
    position: relative;
    background-color: tokens.get($_, "background-color");
    color: tokens.get($_, "color");

    #main-menu:target {
        animation: blink 0.65s ease-in-out 3 both;
        scroll-margin-top: tokens.use($_, "space", 2);
    }

    &.#{$_}--sticky {
        position: sticky;
        top: 0;
        z-index: 7000;
    }

    &.#{$_}--primary {
        --c-header--background-color: #{tokens.get($_, "color--primary")};
        --c-header--color: #{tokens.get($_, "color--primary-contrast")};
        --c-header--border-color: #{tokens.get($_, "color--primary-border")};
    }

    &.#{$_}--secondary {
        --c-header--background-color: #{tokens.get($_, "color--secondary")};
        --c-header--color: #{tokens.get($_, "color--secondary-contrast")};
        --c-header--border-color: #{tokens.get($_, "color--secondary-border")};
    }

    .c-nav:not(.#{$_} .c-card *, .#{$_} .c-paper *) {
        --c-nav--item-color: var(--c-header--color);
    }

    .c-link:not(.#{$_} .c-card *, .#{$_} .c-paper *) {
        --c-link--color--background-contrast: var(--c-header--color);
    }

    .c-button:not(.#{$_} .c-card *, .#{$_} .c-paper *) {
        --c-button--color--surface-contrast: var(--c-header--color);
    }

    &.#{$_}--accented {
        border-bottom: tokens.get($_, "base") solid tokens.get($_, "border-color");
    }

    &.#{$_}--text-white>*,
    &.#{$_}--text-white .c-button__basic,
    &.#{$_}--text-white .c-nav .c-nav__link {
        color: var(--color--white-100);
    }

    &.#{$_}--text-black *,
    &.#{$_}--text-black .c-nav .c-nav__link {
        color: var(--color--black-100);
    }

    &.#{$_}--text-primary *,
    &.#{$_}--text-primary .c-nav .c-nav__link {
        color: tokens.get($_, "color--primary");
    }

    &.#{$_}--text-secondary *,
    &.#{$_}--text-secondary .c-nav .c-nav__link {
        color: tokens.get($_, "color--secondary");
    }

    &.#{$_}--casual {
        #main-menu {
            display: flex;
            flex-grow: 1;
            flex-shrink: 1;

            .c-nav--casual-left {
                justify-content: flex-start;

                .c-nav__item--search {
                    margin-left: auto;
                }
            }

            .c-nav--casual-right {
                justify-content: flex-end;
            }

            .c-nav--casual-center {
                justify-content: center;
            }
        }
    }

    &.#{$_}--business {
        .c-nav--business-left {
            justify-content: flex-start;

            .c-nav__item--search {
                margin-left: auto;
            }
        }

        .c-nav--business-right {
            justify-content: flex-end;
        }

        .c-nav--business-gap {
            justify-content: space-between;
        }
    }

    // Logo
    &__logotype {
        height: tokens.get($_, "logotype-height");
    }
}

@keyframes blink {
    0% {}

    25% {
        @include focus.focus();
    }

    75% {
        @include focus.focus();
    }

    100% {}
}

